--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         <div class="controls">
             <button id="repeat-btn">Repeat</button>
+            <button id="stop-btn">Stop</button>
             <button id="next-btn">Next</button>
         </div>
     </div>
