--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <button id="repeat-btn">Repeat</button>
             <button id="stop-btn">Stop</button>
             <button id="next-btn">Next</button>
+            <button id="save-btn">Save Sentence</button>
+        </div>
+        <div class="saved-sentences">
+            <h2>Your Saved Sentences</h2>
+            <ul id="sentence-list"></ul>
+            <button id="clear-list-btn">Clear List</button>
+            <button id="play-saved-btn">Play Saved List</button>
         </div>
     </div>
 
