--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
                 <option value="2">Very Fast</option>
             </select>
         </div>
+<!-- Volume Control -->
+<label for="volume">Volume:</label>
+<input type="range" id="volume" min="0" max="1" step="0.1" value="1">
+
+<!-- Voice Selection -->
+<label for="voice-select">Select Voice:</label>
+<select id="voice-select"></select>
+
+
         <div class="saved-sentences">
             <h2>Your Saved Sentences</h2>
             <ul id="sentence-list"></ul>
