--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Learn Spanish with English Sentences</h1>
+        <h1>Learn Spanish</h1>
 
         <div class="category-selector">
             <label for="category">Choose a category:</label>
