--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <button id="stop-button">Stop</button>
             <button id="save-button">Save Sentence</button>
             <button id="clear-button">Clear Saved Sentences</button>
-            <button id="suggest-button">Add Suggestion</button>
+      <!--        <button id="suggest-button">Add Suggestion</button>
             <button id="remove-button">Remove Selected Sentence</button>
-
+-->
             <div class="speed-control">
                 <label for="speed-dropdown">Speech Speed:</label>
                 <select id="speed-dropdown">
