--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Learn Spanish with Sentences</h1>
 
       <div class="category-selector">
-            <select id="category-dropdown">
+            <select id="category-dropdown category-select" onchange="loadSentences()">
+
                 <option value="conversation">Conversation</option>
                 <option value="food">Food</option>
                 <option value="clothing">Clothing</option>
