--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="controls">
             <button id="play-button" onclick="togglePlay()">Play</button>
             <button id="auto-play-button" onclick="toggleAutoPlay()">Auto Play</button>
-            <button id="stop-button" onclick="stop()">Stop</button>
+             <!--   <button id="stop-button" onclick="stop()">Stop</button> -->
             <button id="add-sentence-button" onclick="addToSavedList()">Save Sentence</button>
         </div>
 
